# OperationSystemLabs

Lab2/: CMakeLists.txt  a.out  test.cpp
Lab2/.cache/clangd/index/: main.cpp.5D2364D262E0859A.idx  main.cpp.BB985D6A99D74601.idx  subprocess.cpp.16CD2F53306A2556.idx  subprocess.cpp.6BBC40659E835E01.idx  subprocess.h.138BA0B4D9D64A1E.idx  subprocess.h.FB9ABBEB6826AFF6.idx  test1.cpp.D1953B83959CD939.idx
Lab2/include/subprocess/: subprocess.h
Lab2/src/: CMakeLists.txt  main.cpp
Lab2/src/subprocess/: subprocess.cpp
Lab3/: CMakeLists.txt
Lab3/include/cache/: cache.h
Lab3/include/common/: exception.h  file.h  format.h  log.h
Lab3/src/: CMakeLists.txt  main.cpp
Lab3/src/common/: CMakeLists.txt  file.cpp  log.cpp
